// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`start attempt route createChosenQuestionTree creates a random-all group with a limit 1`] = `
Array [
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-0",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-1",
  },
]
`;

exports[`start attempt route createChosenQuestionTree creates a random-all group with no limit 1`] = `
Array [
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-0",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-1",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-2",
  },
]
`;

exports[`start attempt route createChosenQuestionTree creates a random-unseen group with a limit 1`] = `
Array [
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-0",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-1",
  },
]
`;

exports[`start attempt route createChosenQuestionTree creates a random-unseen group with no limit 1`] = `
Array [
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-0",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-1",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-2",
  },
]
`;

exports[`start attempt route createChosenQuestionTree creates a sequential group with a limit 1`] = `
Array [
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-0",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-1",
  },
]
`;

exports[`start attempt route createChosenQuestionTree creates a sequential group with no limit 1`] = `
Array [
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-0",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-1",
  },
  Object {
    "__toObject": true,
    "children": Array [],
    "id": "q-2",
  },
]
`;
